--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@
             align-items: center;
             justify-content: center;
             text-align: left;
+            padding: 0 1rem;
+        }
+
+        .card-content > div {
+            width: 100%;
         }
 
         .card-front .card-content {
@@ -586,7 +591,7 @@
                         <span id="cardNumber">1 / 127</span>
                     </div>
                     <div class="card-content" id="questionText">
-                        Click shuffle to start studying
+                        <div>Click shuffle to start studying</div>
                     </div>
                     <div class="card-footer">Click card to reveal answer</div>
                 </div>
@@ -596,7 +601,7 @@
                         <span id="cardNumberBack">1 / 127</span>
                     </div>
                     <div class="card-content" id="answerText">
-                        Answer will appear here
+                        <div>Answer will appear here</div>
                     </div>
                     <div class="card-footer">Click card to see question</div>
                 </div>
@@ -1303,13 +1308,13 @@
             text = text.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
             // Preserve line breaks
             text = text.replace(/\n/g, '<br>');
-            return text;
+            return `<div>${text}</div>`;
         }
 
         function updateCard() {
             if (filteredCards.length === 0) {
-                questionText.innerHTML = 'No questions available for this category';
-                answerText.innerHTML = 'Select a different category';
+                questionText.innerHTML = '<div>No questions available for this category</div>';
+                answerText.innerHTML = '<div>Select a different category</div>';
                 cardNumber.textContent = '0 / 0';
                 cardNumberBack.textContent = '0 / 0';
                 categoryLabel.textContent = '';
